--- a/catalogo.html
+++ b/catalogo.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/principal.css">
+<link rel="stylesheet" href="styles/principal.css">
 
   <!--css externos-->
 
@@ -45,6 +45,50 @@
       </div>
     </nav>
   </header>
+
+
+    <div class="accordion accordion-flush opciones-herramienta-catalogo" id="accordionFlushExample">
+      <div class="accordion-item opciones-herramienta-unidad">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed"  type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            HERRAMIENTA
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <div id="herramienta" class="container">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item opciones-herramienta-unidad">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            TORNILLERIA
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <div id="tornilleria" class="container">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item opciones-herramienta-unidad">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            OTRO
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <div id="otro" class="container">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
   <section>
@@ -234,9 +278,7 @@
 
 
 <script src="./js/productos.js"></script>
-<div id="productos" class="container">
 
-</div>
 
 </body>
 
