--- a/catalogo.html
+++ b/catalogo.html
@@ -46,12 +46,15 @@
     </nav>
   </header>
 
+  <h1>¡Mira nuestro catalogo!</h1>
+
 
     <div class="accordion accordion-flush opciones-herramienta-catalogo" id="accordionFlushExample">
       <div class="accordion-item opciones-herramienta-unidad">
         <h2 class="accordion-header" id="flush-headingOne">
-          <button class="accordion-button collapsed"  type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-            HERRAMIENTA
+          <button class="accordion-button collapsed fondo-boton-herramienta"  type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+           <span>HERRAMIENTA 
+           </span> 
           </button>
         </h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -63,7 +66,7 @@
       </div>
       <div class="accordion-item opciones-herramienta-unidad">
         <h2 class="accordion-header" id="flush-headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          <button class="accordion-button collapsed fondo-boton-tornilleria" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
             TORNILLERIA
           </button>
         </h2>
@@ -76,7 +79,7 @@
       </div>
       <div class="accordion-item opciones-herramienta-unidad">
         <h2 class="accordion-header" id="flush-headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          <button class="accordion-button collapsed fondo-boton-otro" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
             OTRO
           </button>
         </h2>
@@ -89,26 +92,6 @@
       </div>
     </div>
 
-
-
-  <section>
-    <h1>¡Mira nuestro catalogo!</h1>
-    <section class="caja-productos-clasificado">
-      <div class="caja-producto-unidad">
-        <img src="https://cdn.pixabay.com/photo/2019/03/29/04/35/tools-4088531_960_720.jpg" alt="herramientas" width="80%">
-        <h2>Herramientas</h2>
-      </div>
-      <div class="caja-producto-unidad">
-        <img src="https://cdn.pixabay.com/photo/2015/03/02/23/22/screws-656724_960_720.jpg" alt="tornilleria" width="80%">
-        <h2>Tornilleria</h2>
-      </div>
-      <div class="caja-producto-unidad">
-        <img src="https://cdn.pixabay.com/photo/2018/10/21/00/06/entrepreneurship-3762064_960_720.jpg" alt="ImagenTres" width="80%">
-        <h2>Otros</h2>
-      </div>
-    
-    </section>
-  </section>
 
 
     <aside>
@@ -182,70 +165,6 @@
         <a href="Tornillos-Lamina">
           TORNILLO LAMINA </a>
 
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Bristol">
-          TORNILLO BRISTOL </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-para-Estufa">
-          TORNILLO ESTUFA </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-de-Bronce">
-          TORNILLO BRONCE </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Carriaje">
-          TORNILLO CARRIAJE </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Centrales">
-          TORNILLO CENTRAL </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Varios">
-          TORNILLOS VARIOS </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-de-Soporte">
-          TORNILLOS SOPORTE </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Cuchilla">
-          TORNILLO CUCHILLA </a>
-          </div>
 
   </ul>
 
