añadiendo precios y descripcion a producto a completar

--- a/index_cotizacion.html
+++ b/index_cotizacion.html
@@ -9,7 +9,7 @@
   
 
     <link rel="stylesheet" href="styles/principal.css">
-    <title>Catalogo</title>
+    <title>Cotizacion</title>
 </head>
 <body>
     <header class=content-fluid>
