--- a/mison.html
+++ b/mison.html
@@ -19,28 +19,28 @@
 <body>
   <header class=content-fluid>
     <a href="./index.html"><img src="Imagen/LOGO FINAL.jpeg" alt="logo"></a>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active ">
-            <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./vision.html">VISIÓN</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">CATÁLOGO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+
+      <nav class="navbar navbar-expand-lg navbar-light navbar-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active ">
+                <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./vision.html">VISIÓN</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./catalogo.html">CATÁLOGO</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN</a>
+                </li>
+            </ul>
+          </div>
+        </nav>
 
   </header>
   <div class="carousel-item active">
