--- a/vision.html
+++ b/vision.html
@@ -13,31 +13,32 @@
     <title>Document</title>
 </head>
 <body>
-    <header class=content-fluid>
-      <a href="./index.html"><img src="Imagen/LOGO FINAL.jpeg" alt="logo"></a>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item ">
-                  <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="./vision.html">VISIÓN</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">CATÁLOGO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN</a>
-                  </li>
-              </ul>
-            </div>
-          </nav>
+  <header class=content-fluid>
+    <a href="./index.html"><img src="Imagen/LOGO FINAL.jpeg" alt="logo"></a>
 
-    </header>
+      <nav class="navbar navbar-expand-lg navbar-light navbar-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active ">
+                <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./vision.html">VISIÓN</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./catalogo.html">CATÁLOGO</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN</a>
+                </li>
+            </ul>
+          </div>
+        </nav>
+
+  </header>
     <div class="carousel-item active">
         <img src="Imagen/Captura2.PNG" class="d-block w-100 fondo-oscuro">
         <div class="centrado">MAYORES PROOVEDORES DE TORNILLERIA Y HERRAMIENTA</div>
