footer agregado a todas las paginas

--- a/mison.html
+++ b/mison.html
@@ -64,26 +64,63 @@
 </body>
 
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-  
-  <div class="col-md-4 d-flex align-items-center">
-    <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-      <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-    </a>
-    <span class="text-muted">&copy; 2021 MisionTic C3-G08, Inc</span>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-md-3 item">
+        <h3>TornillosBautista</h3>
+        <ul>
+          <li><a href="./mison.html">Mision</a></li>
+          <li><a href="./vision.html">Vision</a></li>
+          <li><a href="./catalogo.html">Catalogo</a></li>
+          <li><a href="./index_cotizacion.html">Cotización</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="header-info">
+          <li>
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            Llámanos<br />
+            <a href="tel:312%71%42%360">312 71 42 360</a>
+          </li>
+          <li>
+            <i class="fa fa-envelope" aria-hidden="true"></i>Email<br />
+            <a href="mailto:tornillosbautista@hotmail.com">tornillosbautista@hotmail.com</a>
+          </li>
+          <li>
+            <span>
+      
+              <i>Calle 67 N # 9-64 Barrio Bello Horizonte -Popayan Cauca</i>
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm-6 col-md-3 item">
+        <h1>Siguenos</h1>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/tornillosbautistav"><svg class="bi" width="24" height="24"><a href="https://www.facebook.com/tornillosbautistav.com">
+            <i class="customicon fab fa-facebook"></i></a></svg></a></li>
+          <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><a href="https://www.instagram.com/">
+            <i class="customicon fab fa-instagram"></i>
+        </a></svg></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8.com"><svg class="bi" width="24" height="24"><a href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8">
+          <i class="customicon fab fa-whatsapp"></i>
+      </a></svg></a></li>
+        </ul>
+      </div>
+      
+    </div>
+    <div class="row">
+      <div class="col-sm-6 col-md-12 item">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+          </a>
+          <span class="text-muted">&copy; 2021 MisionTic C3-G08, Inc</span>
+        </div>
+      </div>
+
+    </div>
   </div>
-
-  <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-    <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/tornillosbautistav"><svg class="bi" width="24" height="24"><a href="https://www.facebook.com/tornillosbautistav.com">
-      <i class="customicon fab fa-facebook"></i></a></svg></a></li>
-    <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><a href="https://www.instagram.com/">
-      <i class="customicon fab fa-instagram"></i>
-  </a></svg></a></li>
-  <li class="ms-3"><a class="text-muted" href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8.com"><svg class="bi" width="24" height="24"><a href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8">
-    <i class="customicon fab fa-whatsapp"></i>
-</a></svg></a></li>
-  </ul>
-
 
 </footer>
 
