--- a/catalogo.html
+++ b/catalogo.html
@@ -49,7 +49,7 @@
         </nav>
 
   </header>
-
+  <main class="main-catalogo">
   <h1>¡Mira nuestro catálogo!</h1>
 
 
@@ -96,97 +96,6 @@
       </div>
     </div>
 
-
-
-    <aside>
-  <ul id="submenu_catalogo_categorias_interna" class="10010">
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Hexagonales-Grado-2">
-          TORNILLO GRADO 2 </a>
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Hexagonales-Grado-5">
-          TORNILLO GRADO 5 </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Estructurales">
-          TORNILLO ESTRUCTURAL </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Hexagonales-Grado-8">
-          TORNILLO GRADO 8 </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Hexagonales-Grado-9">
-          TORNILLO GRADO 9 </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Milimetricos">
-          TORNILLO MILIMETRICO </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-de-Acero-Inoxidables">
-          TORNILLO INOXIDABLE </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-para-Madera">
-          TORNILLO MADERA </a>
-
-      </div>
-    </li>
-    <li>
-      <div class="tornillo_vineta_2_categorias_interna"></div>
-      <div class="item_submenu_categorias_interna " id="10010">
-        <a href="Tornillos-Lamina">
-          TORNILLO LAMINA </a>
-
-
-  </ul>
-
-</aside>
-
-<main>
-
-  <div>
-    <a href="https://www.mundialdetornillos.com/tornillo-autoperforante" title="TORNILLO AUTOPERFORANTE">
-      TORNILLO AUTOPERFORANTE
-    </a>
-    </h2>
-    <div class="btn_ver_productos">
-      <a href="https://www.mundialdetornillos.com/tornillo-autoperforante" title="TORNILLO AUTOPERFORANTE">VER
-        PRODUCTO</a>
-    </div>
-
-  </div>
 
 
 </main>
