--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <section class="caja-catalogo">
               <img
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
-                width=60% alt="Imagen">
+                width="60%" alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
               <h2>Tornillo Galvanizado</h2>
               <p>Descripcion del articulo</p>
@@ -102,7 +102,7 @@
             <section class="caja-catalogo">
               <img
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
-                width=60% alt="Imagen">
+                width="60%" alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
               <h2>Tornillo Inox</h2>
               <p>Descripcion del articulo</p>
@@ -114,7 +114,7 @@
             <section class="caja-catalogo">
               <img
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
-                width=60% alt="Imagen">
+                width="60%" alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
               <h2>COPA STANLEY HEX. M1/2 </h2>
               <p>Descripcion del articulo</p>
@@ -181,32 +181,29 @@
           </li>
         </ul>
       </div>
+
       <div class="col-sm-6 col-md-3 item">
         <h1>Siguenos</h1>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/tornillosbautistav"><svg class="bi" width="24" height="24"><a href="https://www.facebook.com/tornillosbautistav.com">
-            <i class="customicon fab fa-facebook"></i></a></svg></a></li>
-          <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><a href="https://www.instagram.com/">
-            <i class="customicon fab fa-instagram"></i>
-        </a></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8.com"><svg class="bi" width="24" height="24"><a href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8">
-          <i class="customicon fab fa-whatsapp"></i>
-      </a></svg></a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/tornillosbautistav">
+              <span class="customicon fab fa-facebook"></span>
+          </li>
+          <li class="ms-3"><a class="text-muted" href="">
+              <span class="customicon fab fa-instagram"> </span>
+          </li>
+          <li class="ms-3"><a class="text-muted"
+              href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8.com">
+              <span class="customicon fab fa-whatsapp"></span>
+          </li>
         </ul>
       </div>
       
     </div>
     <div class="row">
-      <div class="col-sm-6 col-md-12 item">
-        <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-          </a>
-          <span class="text-muted">&copy; 2021 MisionTic C3-G08, Inc</span>
+
+          <p class="text-muted">&copy; 2021 MisionTic C3-G08, Inc</p>
         </div>
       </div>
-
-    </div>
   </div>
 
 </footer>
