--- a/mison.html
+++ b/mison.html
@@ -49,13 +49,16 @@
   </div>
   </br></br></br></br></br></br></br></br></br>
   <div>
-    <center>
+      <center>
       <h1 class="titulosPrincipales">MISIÓN</h1>
-      <h6>Brindar soluciones innovadoras y efectivas que satisfagan las necesidades de nuestros clientes
+      </center>
+  </div>
+  <div>
+      <img src = "Imagen/MISION.jpg" clas="imagen_empresa" >
+        <aside> Brindar soluciones innovadoras y efectivas que satisfagan las necesidades de nuestros clientes
         que hacen parte de los diferentes sectores industriales, mediante la comercialización y distribución de
-        tornillería, elementos de fijación y herramientas de calidad. </h6>
-
-    </center>
+        tornillería, elementos de fijación y herramientas de calidad.</aside>
+      
     </br></br>
 
   </div>
